# devicesettings

generic/: .gitattributes  .gitignore  CONTRIBUTING.md  Makefile  Makefile.am  NOTICE  build.sh  configure.ac  rdk_build.sh  rdk_env.xml
generic/ds/: Makefile  Makefile.am  aspectRatio.cpp  audioCompression.cpp  audioEncoding.cpp  audioOutputPort.cpp  audioOutputPortConfig.cpp  audioOutputPortConfig.hpp  audioOutputPortType.cpp  audioStereoMode.cpp  compositeIn.cpp  dslogger.cpp  edid-parser.cpp  frameRate.cpp  frontPanelConfig.cpp  frontPanelIndicator.cpp  frontPanelTextDisplay.cpp  hdmiIn.cpp  host.cpp  iarmProxy.cpp  iarmProxy.hpp  init.cpp  manager.cpp  pixelResolution.cpp  sleepMode.cpp  stereoScopicMode.cpp  videoDFC.cpp  videoDevice.cpp  videoDeviceConfig.cpp  videoDeviceConfig.hpp  videoOutputPort.cpp  videoOutputPortConfig.cpp  videoOutputPortConfig.hpp  videoOutputPortType.cpp  videoResolution.cpp
generic/ds/include/: audioOutputPort.hpp  frontPanelIndicator.hpp  frontPanelSettings.hpp  hdmiIn.hpp  host.hpp  manager.hpp  pixelResolution.hpp  videoDevice.hpp  videoOutputPort.hpp
generic/ipk/: control
generic/rpc/: Makefile
generic/rpc/cli/: Makefile  Makefile.am  dsAudio.c  dsCompositeIn.c  dsDisplay.c  dsFPD.c  dsHdmiIn.c  dsHost.cpp  dsVideoDevice.c  dsVideoPort.c  dsclientlogger.c
generic/rpc/include/: dsInternal.h  dsMgr.h  dsRpc.h  dsclientlogger.h  dsclientregisterlog.h  dsserverlogger.h  dsserverregisterlog.h  exception.hpp  hostPersistence.hpp  illegalArgumentException.hpp
generic/rpc/srv/: Makefile  Makefile.am  dsAudio.c  dsCompositeIn.c  dsDisplay.c  dsFPD.c  dsHdmiIn.c  dsHost.cpp  dsMgr.c  dsVideoDevice.c  dsVideoPort.c  dsserverlogger.c  hostPersistence.cpp
generic/sample/: IsOutputHDR.cpp  Makefile  enableSurroundDecoder.cpp  getAudioConfig.cpp  getCPUTemp.cpp  getDSHalVersion.cpp  getDisplayAttributes.cpp  getEDIDBytes.cpp  getFPBrightness.cpp  getFPState.cpp.disabled  getHDCPStatus.cpp  getHdmiPreference.cpp  getHostEDID.cpp  getSocIDFromSDK.cpp  getVideoOutputPorts.cpp  getZoomSettings.cpp  hdmiIn.cpp  isDisplayConnected.cpp  ms12ProfileTest.cpp  powerModeTest.cpp  resetOutputToSDR.cpp  setARCSAD.cpp  setAudioDucking.cpp  setAudioEnable.cpp  setAudioGain.cpp  setAudioLevel.cpp  setAudioMode.cpp  setAudioMute.cpp  setBassEnhancer.cpp  setDRCMode.cpp  setDialogEnhancement.cpp  setFPBrightness.cpp  setFPColor.cpp  setFPColorRGB.cpp  setFPState.cpp.disabled  setFPTextDisplay.cpp  setFPTextTimeFormat.cpp  setGraphicEQ.cpp  setHdmiPreference.cpp  setMISteering.cpp  (+5 more)
generic/test/: Makefile  testAopRpc.cpp  testConfigAOP.cpp  testConfigVOP.cpp  testFrontPannel.cpp  testGetAudioConfig.cpp  testGetVideoOutputPorts.cpp  testHost.cpp  testLogger.cpp  testPersistence.cpp  testSetAudioConfig.cpp  testVideoDevice.cpp  testVideoDisplay.cpp  testVopRpc.cpp
